k8s-seft-manager-aws-v2-istio/manifests/mainfest/movie-web-backend/api-gateway/api-gateway-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-v1
  namespace: movie-web
  labels:
    app: api-gateway
    version: v1
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
      version: v1
  template:
    metadata:
      labels:
        app: api-gateway
        version: v1
    spec:
      serviceAccountName: movie-web-backend
      containers:
        - name: api-gateway
          image: dev.nhatanhdevops.website/onlineshop/movie-web-backend-api-gateway:v5_ae7dfc4d
          ports:
            - containerPort: 8800
              protocol: TCP  
          resources:
            requests:
              memory: "256Mi"
      imagePullSecrets:
        - name: auth-registry
